# tenny-ledger

./: .cursorrules  .gitignore  LICENSE  PROJECT_INDEX.md  README.md  docker-compose.yml  package-lock.json  rebuild.sh  setup-secrets.sh
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/components/: AdminLayout.tsx  BillPreview.tsx  CategorySelector.tsx  ImageUploader.tsx  Layout.tsx  TransactionForm.tsx  TransactionList.tsx
frontend/components/Dashboard/: RecentTransactions.tsx  Summary.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useAuth.ts  useCategories.ts  useTransactions.ts  useUpload.ts
frontend/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx  profile.tsx  register.tsx  reports.tsx  settings.tsx  upload.tsx
frontend/pages/admin/: index.tsx
frontend/pages/api/proxy/: [...path].ts
frontend/pages/transactions/: [id].tsx  index.tsx  new.tsx
frontend/services/: api.ts
frontend/styles/: globals.css
rust-backend/: .dockerignore  Cargo.toml  Dockerfile
rust-backend/src/: config.rs  db.rs  error.rs  main.rs  routes.rs  schema.rs
rust-backend/src/fixtures/: categories.rs  mod.rs  transactions.rs  users.rs
rust-backend/src/handlers/: auth.rs  mod.rs  ocr.rs  transactions.rs  users.rs
rust-backend/src/models/: bill.rs  category.rs  mod.rs  transaction.rs  user.rs
rust-backend/src/ocr/: data_extraction.rs  image_preprocessing.rs  mod.rs  parser.rs  processor.rs
scripts/: init-db.js
secrets/: README.md  google_vision_api_key.txt.template  jwt_secret.txt.template
