[package]
name = "tenny-ledger-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
actix-web = "4.3"
actix-cors = "0.6"
actix-multipart = "0.6"
diesel = { version = "2.1", features = ["postgres", "r2d2", "numeric", "chrono", "uuid", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
dotenv = "0.15"
env_logger = "0.10"
image = "0.24"
leptess = "0.14"
regex = "1.8"
rust-bert = "0.20"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
bcrypt = "0.14"
rand = "0.8"
bigdecimal = { version = "0.3", features = ["serde"] } 
google-cloud-vision = "0.2"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.13"
